--- a/doubleSelection-admin/src/main/resources/application.yml
+++ b/doubleSelection-admin/src/main/resources/application.yml
@@ -69,8 +69,10 @@ spring:
   redis:
     # 地址
 #    host: 192.168.177.128  #本地虚拟机
-    host: 118.31.228.221    #阿里云服务器
+#    host: 118.31.228.221    #阿里云服务器
+    host: 172.16.14.211      #信创
     # 端口，默认为6379
+
     port: 6379
     # 数据库索引
     database: 0
